--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,7 +6,7 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; connect-src 'self' blob: data: file: https://api.deepinfra.com https://api.openai.com http://127.0.0.1:8765; worker-src 'self' blob: data:; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: file: blob: *; font-src 'self' data: blob:; frame-src 'self' blob: data:; child-src 'self' blob: data:; media-src 'self' data: blob: file:"
+      content="default-src 'self'; connect-src 'self' blob: data: file: https://api.deepinfra.com https://api.openai.com https://generativelanguage.googleapis.com http://127.0.0.1:8765 https://huggingface.co https://cdn-lfs.huggingface.co https://cas-bridge.xethub.hf.co https://*.xethub.hf.co; worker-src 'self' blob: data:; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: file: blob: *; font-src 'self' data: blob:; frame-src 'self' blob: data:; child-src 'self' blob: data:; media-src 'self' data: blob: file:"
     />
     
   </head>
